SONAR-12456 Add Security Hotspots to project badges.
SONAR-12456 Fix existing issues in modfied files.

SONAR-12456 Remove some duplication in tests.